# mhd-vortex-python

./: .gitignore  MHD-READING-GUIDE.md  Makefile  README.md  prompt.md  pyproject.toml
.claude/skills/cfd-hw/: SKILL.md
data/raw/: orszag_tang_64.yaml
docs/source/: examples.tex  homework.sty  index.tex  layout_usage.tex  refs.bib
meshes/: orszag_tang_128.toml  orszag_tang_128.yaml  orszag_tang_256.toml  orszag_tang_256.yaml  orszag_tang_32.toml  orszag_tang_32.yaml  orszag_tang_64.toml
presentation/: Makefile  slides.nav  slides.tex
references/: 2D-IDEAL-MHD-FVM-SOLVER.md  athena++-mhd-code.webloc  farside-plasma-physics-notes-ut-austin.webloc  flash-mhd-test-problems.webloc  plasma-flow alias  pluto-mhd-code.webloc  prep-notes.md
scripts/: convergence_study.py  plot_mesh.py  plot_orszag_tang.py  run_orszag_tang.py
tests/: test_boundary.py  test_equations.py  test_riemann.py
vortex/: boundary.py  diagnostics.py  equations.py  glm.py  integrator.py  io.py  mesh.py  reconstruction.py  riemann.py  solver.py
vortex/problems/: __init__.py  orszag_tang.py
