[project]
name = "final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.2",
    "matplotlib>=3.10.8",
    "numpy<2.4",
    "pygments>=2.19.2",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.2",
    "pytest>=9.0.3",
    "ruff>=0.15.11",
]
